--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@monaco-editor/react": "^4.6.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
